[maven-release-plugin] prepare release jeaf-generator-project-1.6.6

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
 	<artifactId>jeaf-generator-project</artifactId>
-	<version>1.6.6-SNAPSHOT</version>
+	<version>1.6.6</version>
 	<packaging>pom</packaging>
 	<name>JEAF Generator Project</name>
 	<description>JEAF Generator can be used to generate different kinds of classes from UML Models and thus speed up and professionalize software development.</description>
@@ -21,7 +21,8 @@
 		<connection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</connection>
 		<developerConnection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</developerConnection>
 		<url>https://bitbucket.org/anaptecs/jeaf-generator</url>
-	</scm>
+	  <tag>jeaf-generator-project-1.6.6</tag>
+  </scm>
 	
 	<properties>
 		<jeaf.x-fun.api.version>1.6.0</jeaf.x-fun.api.version>
