--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<packaging>pom</packaging>
 	<name>JEAF Generator Project</name>
 	<description>JEAF Generator can be used to generate different kinds of classes from UML Models and thus speed up and professionalize software development.</description>
-	<url>https://github.com/anaptecs/jeaf</url>
+	<url>https://www.anaptecs.de/jeaf</url>
 
 	<scm>
 		<connection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</connection>
