JEAF-2995: Simple types seem to work

--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -59,7 +59,7 @@
 					</packages>
 
 					<!-- Define what should be generated. By default nothing is generated. -->
-					<generateOpenAPI>true</generateOpenAPI>
+					<generateOpenAPISpec>true</generateOpenAPISpec>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
