--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 		<module>jeaf-generator-test-services-impl</module>
 		<module>jeaf-generator-test-services-impl-runtime</module>
 		<module>jeaf-generator-test-junit-testcases</module>
+		<module>jeaf-generator-test-open-api</module>
 	</modules>
 
 </project>
