Added support for required field in declaration of parameters.

--- a/jeaf-generator-test-open-api/src-gen/main/resources/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/product-services.yml
@@ -61,7 +61,7 @@ paths:
           in: header
           description: >- 
             TODO Please add comment
-          required: false
+          required: true
           schema:
             type: string
         - name: language
