Added support for examples in responses and request bodies.

--- a/jeaf-generator-test-open-api/src-gen/main/resources/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/product-services.yml
@@ -54,6 +54,7 @@ paths:
             application/json:
               schema:
                 type: boolean
+                example: 'true'
           
     head:
       responses:
@@ -138,9 +139,11 @@ paths:
           application/json:
             schema:
               type: string
+              example: 'MOBILE_APP'
           application/xml:
             schema:
               type: string
+              example: 'MOBILE_APP'
       responses:
         '200':
           description: >- 
