--- a/jeaf-generator-test-open-api/src-gen/main/resources/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/product-services.yml
@@ -71,6 +71,7 @@ paths:
           required: true
           schema:
             type: string
+            example: '1234-345'
       responses:
         '200':
           description: >- 
@@ -97,6 +98,7 @@ paths:
           required: false
           schema:
             type: string
+            example: 'en'
         - name: resellerID
           in: cookie
           description: >- 
