--- a/jeaf-generator-test-open-api/src-gen/main/resources/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/product-base.yml
@@ -45,7 +45,6 @@ components:
         timeUnit: 
           $ref: '#/components/schemas/TimeUnit'
       required:
-        - objectType
         - value
     # com.anaptecs.jeaf.junit.openapi.base.MoneyAmount
     MoneyAmount:
@@ -64,7 +63,6 @@ components:
         currency: 
           type: string
       required:
-        - objectType
         - amount
         - currency
     # com.anaptecs.jeaf.junit.openapi.base.ChannelCode
@@ -118,7 +116,6 @@ components:
         productID: 
           type: string
       required:
-        - objectType
         - image
     # com.anaptecs.jeaf.junit.openapi.base.Sortiment
     Sortiment:
@@ -216,7 +213,6 @@ components:
         bString: 
           type: string
       required:
-        - objectType
         - aBoolean
         - cBoolean
         - aByte
@@ -334,7 +330,6 @@ components:
           items:
             type: string
       required:
-        - objectType
         - aBooleanArray
         - cBooleanArray
         - aByteArray
@@ -373,7 +368,6 @@ components:
           type: integer
           format: int32
       required:
-        - objectType
         - childAAttribute
     # com.anaptecs.jeaf.junit.openapi.base.ChildB
     ChildB:
@@ -389,19 +383,18 @@ components:
             $ref: '#/components/schemas/ParentClass'
           minItems: 0
       required:
-        - objectType
         - childBAttribute
     # com.anaptecs.jeaf.junit.openapi.base.ChildAA
     ChildAA:
       allOf:
         - $ref: '#/components/schemas/ChildA'
+      deprecated: true
       type: object
       properties:
         childAAAttribute: 
           type: integer
           format: int32
       required:
-        - objectType
         - childAAAttribute
     # com.anaptecs.jeaf.junit.openapi.base.ChildBB
     ChildBB:
@@ -415,16 +408,25 @@ components:
         deprecatedAttribute: 
           type: integer
           format: int32
+          deprecated: true
         deprecatedBs: 
+          # Attribute "deprecatedBs" is marked as deprecated. However OpenAPI does not support to mark references to complex types as deprecated.
           type: array
           items:
             $ref: '#/components/schemas/ChildB'
           minItems: 0
         deprecatedParent: 
+          # Attribute "deprecatedParent" is marked as deprecated. However OpenAPI does not support to mark references to complex types as deprecated.
           $ref: '#/components/schemas/ParentClass'
+        deprecatedArray: 
+          type: array
+          items:
+            type: integer
+            format: int32
+            deprecated: true
       required:
-        - objectType
         - deprecatedAttribute
+        - deprecatedArray
 
     
     # com.anaptecs.jeaf.junit.openapi.base.TimeUnit
