JEAF-2997 Code generator now also supports derecations for OpenAPI enums.

--- a/jeaf-generator-test-open-api/src-gen/main/resources/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/product-base.yml
@@ -457,5 +457,15 @@ components:
         - MOBILE
         - TVM
         - WEB
+        # Literal "LEGACY_POS" is marked as deprecated. However OpenAPI does not support to mark literals as deprecated. 
         - LEGACY_POS
+
+    # com.anaptecs.jeaf.junit.openapi.base.DeprecatedEnum
+    DeprecatedEnum:
+      type: string
+      deprecated: true
+      enum:
+        - ONE
+        - TWO
+        - THREE
 
