JEAF-2995 Improved detection of nullable and readOnly detection.

--- a/jeaf-generator-test-open-api/src-gen/main/resources/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/product-base.yml
@@ -60,8 +60,12 @@ components:
             The amount of money. Attribute is always set.
           type: number
           format: double
+          nullable: false
+          readOnly: true
         currency: 
           type: string
+          nullable: false
+          readOnly: true
       required:
         - amount
         - currency
