Prepared for new release.

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<jeaf.persistence.api.version>1.6.0</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.0</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.0</jeaf.workload.api.version>
-		<jeaf.test.model.version>1.0.12-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.12</jeaf.test.model.version>
 	</properties>
 
 	<modules>
